After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 670989 - Nautilus crashes with SIGFPE at exit
Nautilus crashes with SIGFPE at exit
Status: RESOLVED FIXED
Product: nautilus
Classification: Core
Component: Thumbnails
3.2.x
Other Linux
: Normal critical
: ---
Assigned To: Nautilus Maintainers
Nautilus Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-02-28 17:18 UTC by Giovanni Campagna
Modified: 2012-03-08 02:09 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Giovanni Campagna 2012-02-28 17:18:31 UTC
In nautilus-thumbnailer, the hash table from get_types_table() is destroyed at exit. If by chance the destroynotify is called before another handler calls pixbuf_can_load_type(), the hashtable is no longer valid and it crashes with FPE (because hashtable->mod is set to 0 by free() or other allocations on top of that).

One possibility is to clear out image_mime_types when the table is destroyed, so if needed it will be recreated. Another is just to remove the atexit() handler, as the process is about to go down anyway, and no externally visible resources are held by that table.

(Moved from downstream bug https://bugzilla.redhat.com/show_bug.cgi?id=717740 )
Comment 1 Cosimo Cecchi 2012-03-08 02:09:34 UTC
I now completely removed the use of eel_g_hash_table_new_free_at_exit in nautilus, which should fix all these crashers.