all: remove eel_g_hash_table_new_free_at_exit()

Especially when references can be owned by non-resident modules, this is
just too dangerous.

https://bugzilla.gnome.org/show_bug.cgi?id=670989